# gtkhello

./: .gitignore  README  autogen.sh  configure.ac
data/: Makefile.am  resources-gresources.xml
data/ui/: hello.ui
include/: hello.h
src/: Makefile.am  hello.c  main.c
